<resources>
    <string name="app_name">Sparta</string>
    <string name="action_settings">Settings</string>

    <!--Login Activity Strings-->
    <string name="login_title1">Smart </string>
    <string name="login_title2">Parking</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="err_msg_email">Enter a valid email address</string>
    <string name="err_msg_password">Enter a password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">CREATE NEW ACCOUNT</string>
    <string name="title_activity_registration">RegistrationActivity</string>

    <!--Register Activity Strings-->
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_login">Already registered! Login Me.</string>
    <string name="hint_password_confirm">Password Confirmation</string>
    <string name="err_msg_password_confirmation">Your password doesn\'t match</string>
    <string name="title_activity_home">HomeActivity</string>

    <!--Home Activity Strings-->
    <string name="jabatan_profil">Mahasiswa Teknologi Informasi</string>
    <string name="title_activity_detail_home">DetailHomeActivity</string>
    <string name="title_activity_park_now">Map</string>
    <string name="title_activity_add_park">AddParkActivity</string>
    
    <!--DetailHome Activity Strings-->
    <string name="hint_department">Department Name</string>
    <string name="trailer_free_car_parking_space"> free parking spaces available</string>
    <string name="trailer_max_car_parking_space"> parking spaces supported</string>
    <string name="trailer_time"> WIB</string>
    <string name="btn_go_to_map">OPEN DETAIL LOT</string>

    <!--AddPark Activity Strings-->
    <string name="hint_id_lahan">ID</string>
    <string name="hint_numPoints">points</string>
    <string name="btn_submit">SUBMIT</string>
    <string name="title_activity_test">TestActivity</string>
</resources>
