<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/login_bg"
    tools:context="id.ac.ugm.wg.smartcity.sparta.LoginActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/alpha_primary"
        android:orientation="vertical"
        android:padding="10dp" >
        <!-- Heading -->
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="0.4"
            android:layout_marginTop="30dp"
            >
            <!-- Heading Text -->
            <LinearLayout
                android:id="@+id/TVSmartParkingLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:layout_centerHorizontal="true"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_title1"
                    android:fontFamily="sans-serif-light"
                    android:textSize="30sp"
                    android:layout_marginStart="3dp"
                    android:textColor="@color/login_title1"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_title2"
                    android:fontFamily="sans-serif-light"
                    android:textSize="30sp"
                    android:layout_marginStart="3dp"
                    android:textColor="@color/login_title2"
                    />
            </LinearLayout>
            <!-- Heading Logo -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_below="@+id/TVSmartParkingLogin"
                android:padding="20dp"
                android:layout_centerHorizontal="true">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_logo_ugm"/>
            </LinearLayout>

        </RelativeLayout>

        <!-- Forms -->
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="0.3"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:id="@+id/LLEmailPassword">
            <!-- Email Field -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/TILemail"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:textColorHint="@color/text_white"
                android:layout_above="@+id/TILpassword"
                >
                <EditText
                    android:id="@+id/email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/text_white"
                    android:textColor="@color/text_white"
                    android:textSize="14sp"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:hint="@string/hint_email"
                    android:drawableLeft="@drawable/ic_logo_user"
                    android:backgroundTint="@color/text_white"/>
            </android.support.design.widget.TextInputLayout>
            <!-- Password Field -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/TILpassword"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:textColorHint="@color/text_white"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp">
                <EditText
                    android:id="@+id/password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:textColorHint="@color/text_white"
                    android:textColor="@color/text_white"
                    android:inputType="textPassword"
                    android:textSize="14sp"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:drawableLeft="@drawable/ic_logo_password"
                    android:backgroundTint="@color/text_white"/>
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>

        <!-- Footer -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="0.35"
            android:orientation="vertical"
            android:layout_gravity="end"
            android:paddingLeft="33dp"
            android:paddingRight="33dp">

            <!-- Login Button -->
            <Button
                android:id="@+id/btnLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@color/btn_login_bg"
                android:text="@string/btn_login"
                android:textColor="@color/btn_login" />

            <!-- Link to Login Screen -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btnLinkToRegisterScreen"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginTop="17dip"
                    android:layout_centerHorizontal="true"
                    android:padding="10dp"
                    android:background="@android:color/transparent"
                    android:text="@string/btn_link_to_register"
                    android:textAllCaps="false"
                    android:textColor="@color/text_white"
                    android:textSize="12sp" />
            </RelativeLayout>
        </LinearLayout>


    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>