<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="id.ac.ugm.wg.smartcity.sparta.AddParkActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        >
        <RelativeLayout
            android:id="@+id/Space"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/TILid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/fab_margin">
                <EditText
                    android:id="@+id/ETid"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_id_lahan"
                    android:inputType="number"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/TILpoints"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/TILid"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/fab_margin"
                >
                <EditText
                    android:id="@+id/ETpoints"
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_numPoints"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/BTNSubmit"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:padding="6dp"
                android:text="@string/btn_submit"
                android:textColor="@color/text_white"
                android:background="@drawable/rounded_button"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/fab_margin"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>
        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_above="@+id/Space"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/map"
        app:layout_anchorGravity="bottom|center">
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabChange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logo_metamorph"
            app:backgroundTint="@color/accent"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginEnd="72dp"
            app:fabSize="mini"/>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabLocateMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logo_definelocation"
            app:backgroundTint="@color/accent"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_marginStart="72dp"
            app:fabSize="mini"/>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
